CB: Listbox ItemHandler controlled from ui.template

--- a/test/contentbrowser/ui.template
+++ b/test/contentbrowser/ui.template
@@ -2,7 +2,7 @@
 LISTBOX_BEGIN
     T:ID lbCat
     T:PID None
-    I:X  10
+    I:X  8
     I:Y  100
     I:W  128
     I:H  600
@@ -10,6 +10,7 @@ LISTBOX_BEGIN
     I:IH 128
     I:PAD 2
     S:ORIENTATION VERTICAL
+    S:ITEMHANDLER STANDARD
 LISTBOX_END
 
 LISTBOX_BEGIN
@@ -17,12 +18,13 @@ LISTBOX_BEGIN
     T:PID None
     I:X  150
     I:Y  100
-    I:W  128
+    I:W  600
     I:H  600
     I:IW 128
     I:IH 128
-    I:PAD 20
+    I:PAD 8
     S:ORIENTATION VERTICAL
+    S:ITEMHANDLER NONE
 LISTBOX_END
 
 LISTBOX_BEGIN
@@ -36,6 +38,7 @@ LISTBOX_BEGIN
     I:IH 128
     I:PAD 2
     S:ORIENTATION HORIZONTAL
+    S:ITEMHANDLER STANDARD
 LISTBOX_END
 
 LISTBOX_BEGIN
@@ -49,6 +52,7 @@ LISTBOX_BEGIN
     I:IH 128
     I:PAD 2
     S:ORIENTATION HORIZONTAL
+    S:ITEMHANDLER STANDARD
 LISTBOX_END
 
 
