CB: manageCategoriesHaving differentNumberOf itemSets
The UI template requires to specify enough listboxes to account for
the max number of item sets expected across the different categories.

In turn if any given category contains less number of item sets, then
its content metadata file should contain empty GUI item entries for
the corresponding empty item sets.

This is shown in the sample cm files.

--- a/test/contentbrowser/ui.template
+++ b/test/contentbrowser/ui.template
@@ -55,6 +55,20 @@ LISTBOX_BEGIN
     S:ITEMHANDLER STANDARD
 LISTBOX_END
 
+LISTBOX_BEGIN
+    T:ID lbG3
+    T:PID lbVert
+    I:X  0
+    I:Y  0
+    I:W  700
+    I:H  128
+    I:IW 128
+    I:IH 128
+    I:PAD 2
+    S:ORIENTATION HORIZONTAL
+    S:ITEMHANDLER STANDARD
+LISTBOX_END
+
 
 // vim:sts=4:sw=4:expandtab
 
